# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Used to cause full rebuilds on libc++ rolls. This should be kept in sync
  # with the libcxx_revision var in //DEPS.
  libcxx_revision = "b16984ce99c702355a5b2b4c52574e82cec41fb9"
}
